Switched to forecast io API for SSL use

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/skycons.js"></script>
     <script src="js/weather.js"></script>
     <title>Local Weather Viewer</title>
 
@@ -68,7 +69,8 @@
                 <h1>Weather Viewer</h1>
                   <h4 id="cityName">Your Location:  </h4>
                   <h4 id="tempC">Temperature in C: </h4>
-                  <p id="weatherType">The weather today is: <span class="weather-icon" data-icon=""/></p>
+                  <p id="weatherType">The weather today is: </p>
+                  <canvas id="icon1" width="128" height="128"></canvas>
             </div>
         </div>
         <!-- /.row -->
